--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -98,6 +98,7 @@ html, body, #root, .App {
 @media screen and (max-width: 400px) {
   .Summary-row {
     font-size: 2rem;
+    padding: 0.5rem;
   }
 }
 
